# graph-network-sm24

./: .gitignore  README.md  note.md  pyproject.toml  requirements.txt
.ipynb_checkpoints/: hello-checkpoint.py
notebooks/: pre-problem2-2.ipynb  problem2-1.ipynb  problem2-2.ipynb  problem2-3.ipynb  report2.ipynb
src/: __init__.py  experiment.ipynb  problem2-1.py  problem2-2.ipynb  problem2-2.py
src/.ipynb_checkpoints/: main-checkpoint.ipynb
src/models/: analyzer.py  network.py  network_generator.py  network_simulator.py
