[project]
name = "theme2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "networkx>=3.4.2",
    "notebook>=7.0.7",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
]

[tool.ruff]
# 行の長さ
line-length = 88
# 対象とするPythonバージョン
target-version = "py38"

# 有効にするルール
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

# 無視するルール
ignore = [
    "E203"  # ":"の前後のスペースについて
]

# import整理の設定
[tool.ruff.isort]
known-first-party = ["your_package_name"]
